# StdLib2018

./: .gitignore  BasicPropertySheet.props  DebugPropertySheet.props  PropertySheetWinXP.props  ReleasePropertySheet.props  StdLib2018.sln
AndroidProject/app/: CMakeLists.txt  build.gradle
AndroidProject/app/src/androidTest/java/com/stdlib/industrialice/stdlib/: ExampleInstrumentedTest.java
AndroidProject/app/src/main/: AndroidManifest.xml
AndroidProject/app/src/main/cpp/: native-lib.cpp
AndroidProject/app/src/main/java/com/stdlib/industrialice/stdlib/: MainActivity.java
AndroidProject/app/src/main/res/layout/: activity_main.xml
AndroidProject/app/src/main/res/values/: strings.xml
AndroidProject/app/src/test/java/com/stdlib/industrialice/stdlib/: ExampleUnitTest.java
BuildScripts/: win_build_debug_x64.bat  win_build_debug_x86.bat  win_build_release_x64.bat  win_build_release_x86.bat  win_pull_and_build_debug_x64.bat  win_pull_and_build_debug_x86.bat  win_pull_and_build_release_x64.bat  win_pull_and_build_release_x86.bat
Core/: Allocators.hpp  ApproxMath.hpp  AuxTypes.hpp  CompileTimeStrings.hpp  CompilerSpecific.hpp  Core.vcxproj  Core.vcxproj.filters  CoreDefines.hpp  CoreHeader.hpp  CorePropertySheet.props  CoreTypes.hpp  DIWRSpinLock.cpp  DIWRSpinLock.hpp  DataHolder.hpp  EnumCombinable.hpp  Error.hpp  FileToMemoryStream.cpp  FileToMemoryStream.hpp  FunctionInfo.hpp  GenericFuncs.hpp  HashFuncs.cpp  HashFuncs.hpp  IFile.cpp  IFile.hpp  IMemoryStream.hpp  ListenerHandle.hpp  MTMessageQueue.hpp  MathFunctions.hpp  MatrixMathTypes.cpp  MatrixMathTypes.hpp  MemOps.hpp  MemoryStreamFile.cpp  MemoryStreamFile.hpp  Message.hpp  NameOfType.hpp  NatvisFile.natvis  PlatformDefines.hpp  Result.hpp  SpinLock.cpp  SpinLock.hpp  (+8 more)
EmscriptenProject/: index.html  main.cpp  main.js  makefile  makefile_exports.txt
Misc/: AssignListenerId.hpp  Logger.hpp  Misc.vcxproj  Misc.vcxproj.filters  MiscPropertySheet.props  MiscTypes.hpp  StdMiscLib.cpp  StdMiscLib.hpp  UniqueIdManager.cpp  UniqueIdManager.hpp  UnitTestsLogger.cpp  UnitTestsLogger.hpp  _MiscInitialization.hpp  _PreHeader.hpp
Miscellaneous/: AssignListenerId.hpp  Logger.hpp  LoggerImpl.hpp  Miscellaneous.vcxproj  Miscellaneous.vcxproj.filters  MiscellaneousCoreTypes.hpp  MiscellaneousPropertySheet.props  StdMiscellaneousLib.cpp  StdMiscellaneousLib.hpp  UniqueIdManager.cpp  UniqueIdManager.hpp  _PreHeader.cpp  _PreHeader.hpp
Platform/: File.cpp  File.hpp  FilePath.cpp  FilePath.hpp  FileSystem.hpp  FileToCFile.cpp  FileToCFile.hpp  MemoryMappedFile.cpp  MemoryMappedFile.hpp  NativeConsole.hpp  Platform.vcxproj  Platform.vcxproj.filters  PlatformErrorResolve.hpp  PlatformPropertySheet.props  PlatformTypes.hpp  Posix_File.cpp  Posix_FileSystem.cpp  Posix_MemoryMappedFile.cpp  Posix_NativConsole.cpp  Posix_PlatformErrorResolve.cpp  Posix_SystemInfo.cpp  Posix_TimeMoment.cpp  Posix_VirtualMemory.cpp  StandardFile.cpp  StandardFile.hpp  StdPlatformLib.cpp  StdPlatformLib.hpp  SystemInfo.hpp  TimeMoment.cpp  TimeMoment.hpp  VirtualKeys.cpp  VirtualKeys.hpp  VirtualMemory.hpp  Win_File.cpp  Win_FileSystem.cpp  Win_MemoryMappedFile.cpp  Win_NativeConsole.cpp  Win_PlatformErrorResolve.cpp  Win_SystemInfo.cpp  Win_TimeMoment.cpp  (+3 more)
PlatformAbstraction/: File.cpp  File.hpp  FilePath.cpp  FilePath.hpp  FileSystem.hpp  FileToCFile.cpp  FileToCFile.hpp  Files.hpp  MemoryMappedFile.cpp  MemoryMappedFile.hpp  PlatformAbstraction.vcxproj  (+27 more)
(+18 files in other folders)
